--- a/package.json
+++ b/package.json
@@ -19,8 +19,13 @@
   },
   "homepage": "https://github.com/icodeyouso/http-auth#readme",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
+    "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.2",
-    "install": "^0.10.1"
+    "install": "^0.10.1",
+    "jade": "^1.11.0",
+    "nodemon": "^1.12.1",
+    "pg-promise": "^7.2.1"
   }
 }
