--- a/package.json
+++ b/package.json
@@ -19,14 +19,18 @@
   },
   "homepage": "https://github.com/icodeyouso/http-auth#readme",
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.2",
     "install": "^0.10.1",
     "jade": "^1.11.0",
+    "morgan": "^1.9.0",
     "nodemon": "^1.12.1",
     "pg": "^7.3.0",
-    "pg-promise": "^7.2.1"
+    "pg-hstore": "^2.3.2",
+    "pg-promise": "^7.2.1",
+    "sequelize": "^4.22.1"
   }
 }
